--- a/01_Scheduling_with_Arrival/04_Flowtime_Rescheduling (Regeneration).ipynb
+++ b/01_Scheduling_with_Arrival/04_Flowtime_Rescheduling (Regeneration).ipynb
@@ -29,9 +29,6 @@
    "source": [
     "import pandas as pd\n",
     "import pulp\n",
-    "import math\n",
-    "import re\n",
-    "\n",
     "\n",
     "pd.set_option('display.max_rows', 20)"
    ]
@@ -59,10 +56,7 @@
    "id": "812d02e5-94c8-4889-b25f-46912dc25482",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import utils.rolling_planning.init_jobs_times as rp_init\n",
-    "import utils.rolling_planning.procedure as rp_proced"
-   ]
+   "source": "import utils.rolling_planning.init_jobs_times as rp_init"
   },
   {
    "cell_type": "code",
@@ -2004,9 +1998,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2018,7 +2012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
