rolling planning 2 versions

--- a/01_Scheduling_with_Arrival/06b_Rolling Planning_with deviation penalty.ipynb
+++ b/01_Scheduling_with_Arrival/06b_Rolling Planning_with deviation penalty.ipynb
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "6b68264c-dbc9-4d94-ad26-e0b2842dcb59",
+   "execution_count": 1,
+   "id": "b50144f8-de61-4ea3-bdd5-1d319d0680a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "day_length = 1440\n",
     "horizon_days = 3\n",
     "\n",
-    "notebook_prefix = \"6a\""
+    "notebook_prefix = \"6b\""
    ]
   },
   {
@@ -144,11 +144,7 @@
    "id": "f2308d11-b686-47d4-a2ee-473b15f451dc",
    "metadata": {},
    "source": [
-    "#### Rescheduling für Tage 1-5\n",
-    "- Tag 1: Ankunfttermine in [1, 2, 3] + unabgeschlosse von Vortagen (evtl. Tag 0)\n",
-    "- Tag 2: Ankunfttermine in [2, 3, 4] + unabgeschlosse von Vortagen (evtl. Tag 0 \"oder\" Tag 1)\n",
-    "- ...\n",
-    "- Tag 5: Ankunfttermine in [5, 6, 7] + unabgeschlosse von Vortagen"
+    "#### Rescheduling für Tage 1-5"
    ]
   },
   {
@@ -185,13 +181,13 @@
     "    # ------------------- III. Rescheduling durchführen -------------------------------\n",
     "\n",
     "    starting_time = time.time()\n",
-    "    df_plan = rssv.solve_jssp_individual_flowtime_with_fixed_ops(df_jssp_curr, df_times_curr, df_execution_important,\n",
-    "                                                                   reschedule_start = day_start,\n",
-    "                                                                   solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
+    "    df_plan = rssv.solve_jssp_flowtime_with_devpen(df_jssp_curr, df_times_curr, df_execution_important, r = 0.4, # 40% Flowtime, 60% Abweichung\n",
+    "                                                   reschedule_start = day_start, solver= \"HiGHS\", \n",
+    "                                                   msg=False, timeLimit=max_time, gapRel= 0.05)\n",
     "    solver_duration = time.time() - starting_time\n",
     "    print(f\"\\n  Scheduling-Dauer: {int(solver_duration // 60)} Minuten und {(solver_duration % 60):.2f} Sekunden.\")\n",
     "\n",
-    "    df_plan.to_csv(get_schedule_filename(notebook_prefix, day=day_numb), index=False)\n",
+    "    df_plan.to_csv(get_schedule_filename(notebook_prefix, day=day_numb, suffix=\"devpen\"), index=False)\n",
     "\n",
     "    show.plot_gantt_machines(df_plan, title=f\"Gantt-Diagramm ab Tag {day_numb}\")\n",
     "    check.check_constraints(df_plan)\n",
