--- a/01_Scheduling_with_Arrival/04_Flowtime_Rescheduling (Regeneration).ipynb
+++ b/01_Scheduling_with_Arrival/04_Flowtime_Rescheduling (Regeneration).ipynb
@@ -56,7 +56,9 @@
    "id": "812d02e5-94c8-4889-b25f-46912dc25482",
    "metadata": {},
    "outputs": [],
-   "source": "import utils.rolling_planning.init_jobs_times as rp_init"
+   "source": [
+    "import utils.rolling_planning.init_jobs_times as rp_init"
+   ]
   },
   {
    "cell_type": "code",
@@ -1998,9 +2000,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2012,7 +2014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
