--- a/01_Scheduling_with_Arrival/05_Flowtime_Rolling Planning_init.ipynb
+++ b/01_Scheduling_with_Arrival/05_Flowtime_Rolling Planning_init.ipynb
@@ -959,7 +959,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "ca76c289-efab-41c5-a0d3-c72b4a4ab9c8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1438,9 +1440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1452,7 +1454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
