--- a/02_Scheduling_with_Arrival_and_DueDate/04b_Tardiness_Max_Rescheduling (Regeneration).ipynb
+++ b/02_Scheduling_with_Arrival_and_DueDate/04b_Tardiness_Max_Rescheduling (Regeneration).ipynb
@@ -68,7 +68,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_time = 60*60*6 # 6h"
+    "max_time = 60*60*4 # 4h\n",
+    "\n",
+    "main_file_path = \"../main_data/{}\""
    ]
   },
   {
@@ -353,7 +355,7 @@
     }
    ],
    "source": [
-    "df_jssp, df_times = rp_init.init_jobs_with_arrivals(df_instance, 2,  u_b_mmax = 0.9)\n",
+    "df_jssp, df_arrivals = rp_init.init_jobs_with_arrivals(df_instance, 2,  u_b_mmax = 0.9)\n",
     "df_jssp"
    ]
   },
@@ -1889,6 +1891,40 @@
     "check.is_operation_sequence_correct(df_reschedule)\n",
     "check.is_job_timing_correct(df_reschedule)\n",
     "check.is_start_correct(df_reschedule)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73aaf133-dab8-4915-a081-e3d956631731",
+   "metadata": {},
+   "source": [
+    "### Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa16f42d-8241-4a27-a8c5-b4a24f030bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plan.to_csv(main_file_path.format(\"0204b_tardiness_max_schedule_og.csv\"), index = False)\n",
+    "df_execution.to_csv(main_file_path.format(\"0204b_tardiness_max_schedule_simulation.csv\"), index = False)\n",
+    "df_reschedule.to_csv(main_file_path.format(\"0204b_tardiness_max_schedule_revised.csv\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c41558a8-41b8-47d7-ab07-3e25bb64b7b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_execution = df_execution.rename(columns={\"Simulated Processing Time\": \"Processing Time\"})\n",
+    "\n",
+    "df_schedule_mix = pd.concat([df_execution, df_reschedule], ignore_index=True)\n",
+    "df_schedule_mix = df_schedule_mix.sort_values(by=\"Start\").reset_index(drop=True)\n",
+    "df_schedule_mix.to_csv(main_file_path.format(\"0204b_tardiness_max_schedule_revised_with_sim.csv\"), index = False)"
    ]
   }
  ],
