--- a/02_Scheduling_with_Arrival_and_DueDate/04c_Lateness_Sum_Rescheduling (Regeneration).ipynb
+++ b/02_Scheduling_with_Arrival_and_DueDate/04c_Lateness_Sum_Rescheduling (Regeneration).ipynb
@@ -5,7 +5,7 @@
    "id": "53c73a85-6ed9-4164-8069-6dd08b733ae5",
    "metadata": {},
    "source": [
-    "# Rescheduling mit Tardiness (Summe)\n",
+    "# Rescheduling mit Lateness (Summe)\n",
     "> Planunghorizont Tag 0: 2 Tage\n",
     "> Rescheduling des Tages 1"
    ]
@@ -45,7 +45,7 @@
     "\n",
     "import utils.schedule_interarrival as sit\n",
     "import utils.scheduling_solver as ssv\n",
-    "import utils.rescheduling_solver_tardiness as rssv\n",
+    "import utils.rescheduling_solver_lateness as rssv\n",
     "\n",
     "from ProductionDaySimulation import ProductionDaySimulation"
    ]
@@ -68,7 +68,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_time = 60*60*4 # 4h"
+    "max_time = 60*60*4 # 4h\n",
+    "\n",
+    "main_file_path = \"../main_data/{}\""
    ]
   },
   {
@@ -702,7 +704,7 @@
     "starting_time = time.time()\n",
     "\n",
     "# Scheduling\n",
-    "df_plan = ssv.solve_jssp_sum_tardiness(df_jssp, df_times, solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
+    "df_plan = ssv.solve_jssp_sum_absolute_lateness(df_jssp, df_times, solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
     "df_plan\n",
     "\n",
     "# Informationen\n",
@@ -1943,7 +1945,7 @@
    ],
    "source": [
     "starting_time = time.time()\n",
-    "df_reschedule = rssv.solve_jssp_sum_tardiness_with_fixed_ops(df_rest, df_time_rest, df_execution_important,\n",
+    "df_reschedule = rssv.solve_jssp_sum_lateness_with_fixed_ops(df_rest, df_time_rest, df_execution_important,\n",
     "                                                                   reschedule_start = 1440,\n",
     "                                                                   solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
     "# Informationen\n",
@@ -1996,6 +1998,40 @@
     "check.is_operation_sequence_correct(df_reschedule)\n",
     "check.is_job_timing_correct(df_reschedule)\n",
     "check.is_start_correct(df_reschedule)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ec35e5-141a-4330-af58-c5ce59a5e584",
+   "metadata": {},
+   "source": [
+    "### Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "710ea9d5-2145-418e-b70c-bfa2e28e8acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plan.to_csv(main_file_path.format(\"0204c_lateness_sum_schedule_og.csv\"), index = False)\n",
+    "df_execution.to_csv(main_file_path.format(\"0204c_lateness_sum_schedule_simulation.csv\"), index = False)\n",
+    "df_reschedule.to_csv(main_file_path.format(\"0204c_lateness_sum_schedule_revised.csv\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9789a952-764a-46ae-8b63-9424f38c5086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_execution = df_execution.rename(columns={\"Simulated Processing Time\": \"Processing Time\"})\n",
+    "\n",
+    "df_schedule_mix = pd.concat([df_execution, df_reschedule], ignore_index=True)\n",
+    "df_schedule_mix = df_schedule_mix.sort_values(by=\"Start\").reset_index(drop=True)\n",
+    "df_schedule_mix.to_csv(main_file_path.format(\"0204c_lateness_sum_schedule_revised_with_sim.csv\"), index = False)"
    ]
   }
  ],
