--- a/02_Scheduling_with_Arrival_and_DueDate/04d_Lateness_Max_Rescheduling (Regeneration).ipynb
+++ b/02_Scheduling_with_Arrival_and_DueDate/04d_Lateness_Max_Rescheduling (Regeneration).ipynb
@@ -5,7 +5,7 @@
    "id": "53c73a85-6ed9-4164-8069-6dd08b733ae5",
    "metadata": {},
    "source": [
-    "# Rescheduling mit Tardiness (Summe)\n",
+    "# Rescheduling mit Lateness (Max)\n",
     "> Planunghorizont Tag 0: 2 Tage\n",
     "> Rescheduling des Tages 1"
    ]
@@ -45,7 +45,7 @@
     "\n",
     "import utils.schedule_interarrival as sit\n",
     "import utils.scheduling_solver as ssv\n",
-    "import utils.rescheduling_solver_tardiness as rssv\n",
+    "import utils.rescheduling_solver_lateness as rssv\n",
     "\n",
     "from ProductionDaySimulation import ProductionDaySimulation"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "adea4135-cc3a-4fed-9edf-2ac06073ebb7",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
     "starting_time = time.time()\n",
     "\n",
     "# Scheduling\n",
-    "df_plan = ssv.solve_jssp_sum_tardiness(df_jssp, df_times, solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
+    "df_plan = ssv.solve_jssp_max_absolute_lateness(df_jssp, df_times, solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
     "df_plan\n",
     "\n",
     "# Informationen\n",
@@ -1943,9 +1943,9 @@
    ],
    "source": [
     "starting_time = time.time()\n",
-    "df_reschedule = rssv.solve_jssp_sum_tardiness_with_fixed_ops(df_rest, df_time_rest, df_execution_important,\n",
+    "df_reschedule = rssv.solve_jssp_max_lateness_with_fixed_ops(df_rest, df_time_rest, df_execution_important,\n",
     "                                                                   reschedule_start = 1440,\n",
-    "                                                                   solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
+    "                                                                   solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.10)\n",
     "# Informationen\n",
     "ending_time = time.time()\n",
     "solver_duration = ending_time - starting_time\n",
