--- a/02_Scheduling_with_Arrival_and_DueDate/06b_Tardiness_Rolling Planning_with deviation penalty.ipynb
+++ b/02_Scheduling_with_Arrival_and_DueDate/06b_Tardiness_Rolling Planning_with deviation penalty.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d5f729b7-1f20-451e-a928-6b13d0faed0f",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "3f991dc0-f230-4385-9d3d-1235b1a1a58f",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bea62a07-86f5-4de0-acae-8ced3d415d90",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24d6b2f3-4137-48d7-83a4-d688df4306db",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "490dcbe4-b173-4e2c-bc31-a2f3ca3db863",
    "metadata": {},
    "outputs": [],
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3372a48f-144a-46f9-bb2a-ddf449f688a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_time = 60*60*6 # 6h"
+    "max_time = 60*60*7 # 7h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "6b68264c-dbc9-4d94-ad26-e0b2842dcb59",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b75e3d2a-2b67-4cc3-ae84-b969f4384475",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "776fc4a8-6f31-4d69-88da-14cdbc2cf517",
    "metadata": {},
    "outputs": [],
@@ -195,6 +195,7 @@
     "\n",
     "    show.plot_gantt_machines(df_plan, title=f\"Gantt-Diagramm ab Tag {day_numb}\")\n",
     "    check.check_constraints(df_plan)\n",
+    "    print(show.count_column_grouped(df_plan, 'Tardiness'))\n",
     "\n",
     "    # ------------------- IV. Einen Tag simulieren -------------------------------------\n",
     "\n",
@@ -211,9 +212,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -225,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
