--- a/02_Scheduling_with_Arrival_and_DueDate/06a_Tardiness_Rolling Planning_simple.ipynb
+++ b/02_Scheduling_with_Arrival_and_DueDate/06a_Tardiness_Rolling Planning_simple.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_time = 60*60*7 # 7h"
+    "max_time = 60*60*6 # 6h"
    ]
   },
   {
@@ -144,11 +144,11 @@
    "id": "f2308d11-b686-47d4-a2ee-473b15f451dc",
    "metadata": {},
    "source": [
-    "#### Rescheduling für Tage 1-6\n",
+    "#### Rescheduling für Tage 1-5\n",
     "- Tag 1: Ankunfttermine in [1, 2, 3] + unabgeschlosse von Vortagen (evtl. Tag 0)\n",
     "- Tag 2: Ankunfttermine in [2, 3, 4] + unabgeschlosse von Vortagen (evtl. Tag 0 \"oder\" Tag 1)\n",
     "- ...\n",
-    "- Tag 6: Ankunfttermine in [6, 7, 8] + unabgeschlosse von Vortagen"
+    "- Tag 5: Ankunfttermine in [5, 6, 7] + unabgeschlosse von Vortagen"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "first_start = 1\n",
-    "last_planning_start = 6"
+    "last_planning_start = 5"
    ]
   },
   {
@@ -186,8 +186,8 @@
     "\n",
     "    starting_time = time.time()\n",
     "    df_plan = rssv.solve_jssp_max_tardiness_with_fixed_ops(df_jssp_curr, df_times_curr, df_execution_important,\n",
-    "                                                                   reschedule_start = day_start,\n",
-    "                                                                   solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05)\n",
+    "                                                           reschedule_start = day_start,\n",
+    "                                                           solver= \"HiGHS\", msg=False, timeLimit=max_time, gapRel= 0.05, threads=7)\n",
     "    solver_duration = time.time() - starting_time\n",
     "    print(f\"\\n  Scheduling-Dauer: {int(solver_duration // 60)} Minuten und {(solver_duration % 60):.2f} Sekunden.\")\n",
     "\n",
@@ -199,7 +199,7 @@
     "\n",
     "    # ------------------- IV. Einen Tag simulieren -------------------------------------\n",
     "\n",
-    "    simulation = ProductionDaySimulation(df_plan, vc=vc)\n",
+    "    simulation = ProductionDaySimulation(df_plan, vc=0.35)\n",
     "    df_execution, df_undone = simulation.run(start_time=day_start, end_time=day_end)\n",
     "    if not df_execution.empty:\n",
     "        if plot_results:\n",
