--- a/03_CP_Scheduling_with_Arrival_and_DueDate/06_Lateness_Rolling Planning_v2.ipynb
+++ b/03_CP_Scheduling_with_Arrival_and_DueDate/06_Lateness_Rolling Planning_v2.ipynb
@@ -1,50 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8d6c3013-6257-4a6b-a916-8480f817d42a",
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# Rolling Planning mit Lateness (Tardiness + Earliness)",
-   "id": "a099513bae901e7f"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "max_time = 60*30 # 1/2h",
-   "id": "a80878b91fb4719e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "import time",
-   "id": "ee6829cd3928e04d"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "# Rolling Planning mit Lateness (Tardiness + Earliness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c691154e-2d91-4a98-85f2-26ac6fabdb8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_time = 60*45 # 1/2h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "254e0d3d-4ec5-4b04-8787-f18c807b00a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
     "from ortools.sat.python import cp_model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "pd.set_option('display.max_rows', 20)"
-   ],
-   "id": "22a48143e608656e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
+    "pd.set_option('display.max_rows', 20)\n",
+    "\n",
+    "\n",
     "import utils.presenter as show\n",
     "import utils.checker as check\n",
     "\n",
@@ -56,87 +46,93 @@
     "import utils.schedule_deadline as deadline_gen\n",
     "\n",
     "from ProductionDaySimulation import ProductionDaySimulation"
-   ],
-   "id": "ad3edf6cd2b4592e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "start_notebook = time.time()",
-   "id": "ba2d173d1558cc9a"
+   "id": "1584f720-7afe-4e11-90ff-873cdbc5f4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_notebook = time.time()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "cfcbe01c-fa6c-474f-b6ed-461bfd6e9c42",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_schedule_filename(prefix: str = \"\", day: int = 0, data_txt: str = \"schedule\", suffix: str = \"\") -> str:\n",
     "    file_template = \"data/{prefix}_{data}_{day:02d}{suffix}.csv\"\n",
     "    if suffix:\n",
     "        suffix = f\"_{suffix}\"\n",
     "    return file_template.format(prefix=prefix,data=data_txt,day=day, suffix=suffix)"
-   ],
-   "id": "fa2e68f30bcb29c"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Generierung des Datensatzes für 10 Tage (Ankunft)",
-   "id": "5f0739a5d0449ca4"
+   "id": "e281ba63-c7d2-42fc-b705-f20da9da04b7",
+   "metadata": {},
+   "source": [
+    "## Generierung des Datensatzes für 10 Tage (Ankunft)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f73cd362-7914-4a1b-bbad-79f3f863642a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_instance = pd.read_csv(\"data/00_instance.csv\")\n",
     "\n",
     "df_jssp, df_arrivals = rp_init.init_jobs_with_arrivals(df_instance, 10,  u_b_mmax = 0.98)\n",
     "df_jssp"
-   ],
-   "id": "a7be1eb29adb1aac"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "93fefd32-9c02-46cd-aeea-b8c482dacd03",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Deadlines + Umwandlung in Integer\n",
     "df_times = deadline_gen.get_times_df(df_jssp, df_arrivals, ssv.schedule_fcfs_with_arrivals, target_service=1)\n",
     "df_times[\"Arrival\"] = np.floor(df_times[\"Arrival\"]).astype(int)\n",
     "df_times[\"Deadline\"] = np.ceil(df_times[\"Deadline\"]).astype(int)\n",
     "df_times"
-   ],
-   "id": "32626a520c17eecb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Params",
-   "id": "96873da1f885c48f"
+   "id": "18fb2468-ab05-4c95-8dbc-b4884704e43e",
+   "metadata": {},
+   "source": [
+    "## Params"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "d668cc64-2893-46e7-9fad-ae16c558a084",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# fix\n",
     "day_length = 1440\n",
     "horizon_days = 3"
-   ],
-   "id": "1f5c3b0fae3c2668"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4185d37b-d87f-4ca4-9b77-cced9a8eac47",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# init\n",
     "day_numb = 0\n",
@@ -144,60 +140,66 @@
     "day_start = 0\n",
     "day_end = 0\n",
     "planning_end = 0"
-   ],
-   "id": "49acd5e131b7ac3e"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Initialisierung (Tag 0)",
-   "id": "56387e5362671e62"
+   "id": "1d533703-fd4d-4986-aaf0-16398307d28a",
+   "metadata": {},
+   "source": [
+    "# Initialisierung (Tag 0)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "d00403b0-2e6c-4d5d-bd10-1b8e9e920e97",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "day_numb = 0\n",
     "\n",
     "day_start = day_length*day_numb                      # 0\n",
     "day_end = day_start + day_length                     # 1440\n",
     "planning_end =  day_start + horizon_days*day_length  # 4320"
-   ],
-   "id": "4a1fc54de5564722"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "cd53322c-01b3-4101-9dfa-2369629cb3fa",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# I)\n",
     "df_jssp_curr, df_times_curr = rp_proced.filter_jobs_by_arrival_window(df_times, df_jssp, day_start, planning_end)\n",
     "df_jssp_curr"
-   ],
-   "id": "80140aa5229bdcb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "df_times_curr ",
-   "id": "b3d4c5521cf04bc8"
+   "id": "7aea2214-124e-4f35-bc38-3e2542d5418b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_times_curr "
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Scheduling",
-   "id": "87a8b28acc54666a"
+   "id": "981e3f8c-5001-419b-8816-70a75690fad7",
+   "metadata": {},
+   "source": [
+    "### Scheduling"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "86e61e1e-1722-4847-9c29-d2c0499b4e12",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "starting_time = time.time()\n",
     "\n",
@@ -212,117 +214,110 @@
     "solver_duration = ending_time - starting_time\n",
     "print(f\"\\nScheduling-Dauer: {int(solver_duration // 60)} Minuten und {(solver_duration % 60):.2f} Sekunden.\")\n",
     "df_plan"
-   ],
-   "id": "8b62c63b61d04886"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "a6c088b6-3304-4eb7-b2f8-4bf976462af7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "show.plot_gantt_jobs(df_plan)\n",
+    "show.plot_gantt_machines(df_plan)\n",
     "\n",
     "check.is_machine_conflict_free(df_plan)\n",
     "check.is_operation_sequence_correct(df_plan)\n",
     "check.is_job_timing_correct(df_plan)\n",
     "check.is_start_correct(df_plan)"
-   ],
-   "id": "ff4b7ab117cfdfb7"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "show.plot_gantt_machines(df_plan)",
-   "id": "bb06a5ad4b9a05f7"
-  },
-  {
+   "id": "d2fde9e9-5aec-4b25-81cf-587e1857c6c2",
    "metadata": {},
-   "cell_type": "code",
    "outputs": [],
-   "execution_count": null,
    "source": [
     "last_ops = df_plan.sort_values(['Job', 'Operation']).drop_duplicates('Job', keep='last')\n",
     "show.count_column_grouped(last_ops, \"Lateness\", max_val = 90, steps= 30)"
-   ],
-   "id": "7a541464d33d3f5d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Simulation",
-   "id": "b3522247a62f227"
+   "id": "934311c6-8945-4e92-a575-1fe5d0654902",
+   "metadata": {},
+   "source": [
+    "### Simulation"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "1cf54640-6166-499e-b145-8077c1ae9afc",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "simulation = ProductionDaySimulation(df_plan, vc=0.35)\n",
     "df_execution, df_undone = simulation.run(start_time = day_start, end_time=day_end)"
-   ],
-   "id": "fcd27c7eaeffa4ca"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4eb46463-42c2-45b2-83f1-3349f079d8f9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not df_execution.empty:\n",
     "    show.plot_gantt_machines(df_execution, duration_column=\"Simulated Processing Time\")\n",
     "else:\n",
     "    print(f\"Nothing executed on day {day_numb}\")"
-   ],
-   "id": "4527cd245b3b84e3"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "df_undone",
-   "id": "29f2f54cc3d2345c"
+   "id": "6822dbe9-85d1-4ee9-98e7-4fd2e4deb1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_undone"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "df_plan.to_csv(get_schedule_filename(\"06\", day=day_numb, suffix=\"init\"), index = False)",
-   "id": "5e9148c86357c9ad"
+   "id": "88799847-9910-4de4-a43f-45e24ad8024e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plan.to_csv(get_schedule_filename(\"06\", day=day_numb, suffix=\"init\"), index = False)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4b1a819d-e13c-4470-a2ef-f98057c3a4eb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_plan_init = df_plan\n",
     "df_execution_init = df_execution"
-   ],
-   "id": "a02a70ca9ac0ff52"
+   ]
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "-",
-   "id": "2a9a005a256ee9dc"
-  },
-  {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## A) Rolling Planning Simple",
-   "id": "9bae3ff51d72f556"
+   "id": "c628db4c-eea4-4f0f-bd77-b7b0509fc699",
+   "metadata": {},
+   "source": [
+    "## A) Rolling Planning Simple"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "2a15c822-4ace-4efd-96b5-908b60682887",
+   "metadata": {},
    "source": [
     "**Zielfunktion:**\n",
     "\n",
@@ -337,15 +332,15 @@
     "- \\\\( w_t \\in \\mathbb{N},\\ w_e \\in \\mathbb{N} \\\\): Gewicht für Tardiness und Earliness  \n",
     "- \\\\( \\text{Tardiness}_j = \\max(0, C_j - d_j) \\\\), \\\\( \\text{Earliness}_j = \\max(0, d_j - C_j) \\\\)  \n",
     "    - \\\\( C_j \\\\): Fertigstellungszeitpunkt der letzten Operation von Job \\\\( j \\\\)  \n",
-    "    - \\\\( d_j \\\\): Deadline für Job \\\\( j \\\\)\n"
-   ],
-   "id": "df882077a4c6572d"
+    "    - \\\\( d_j \\\\): Deadline für Job \\\\( j \\\\)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "9bafa64b-cdc4-4e24-9fa3-df1eecb6d8af",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "prefix_name = \"06_simple\"\n",
     "\n",
@@ -395,18 +390,20 @@
     "        show.plot_gantt_machines(df_execution, title=f\"Gantt-Diagramm für Simulationstag {day_numb}\", duration_column=\"Simulated Processing Time\")\n",
     "    else:\n",
     "        print(f\"Nothing executed on day {day_numb}\")"
-   ],
-   "id": "c5fee6412112ad4b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## B) Rolling Planning mit \"Deviation Penalty\"",
-   "id": "46ba8dda8830425"
+   "id": "735ca905-d706-48eb-9602-56eedcb51014",
+   "metadata": {},
+   "source": [
+    "## B) Rolling Planning mit \"Deviation Penalty\""
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "33792350-d25c-4f0f-955d-e89cf5a2cd2a",
+   "metadata": {},
    "source": [
     "**Zielfunktion:**\n",
     "\n",
@@ -424,16 +421,15 @@
     "    - \\\\( C_j \\\\) ist das Fertigstellungsdatum des letzten Schritts von Job \\\\( j \\\\)  \n",
     "    - \\\\( d_j \\\\) ist die Deadline für Job \\\\( j \\\\)  \n",
     "- \\\\( S_{jo} \\\\) ist der Startzeitpunkt der \\\\( o \\\\)-ten Operation von Job \\\\( j \\\\)  \n",
-    "- \\\\( S_{jo}^{\\text{original}} \\\\) ist der ursprünglich geplante Startzeitpunkt\n",
-    "\n"
-   ],
-   "id": "e9dc1fad38de7fa5"
+    "- \\\\( S_{jo}^{\\text{original}} \\\\) ist der ursprünglich geplante Startzeitpunkt"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "053f711c-3ec9-4f5b-9950-f4f9d2073cc9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from ortools.sat.python import cp_model\n",
     "import pandas as pd\n",
@@ -648,14 +644,14 @@
     "    print(f\"Deviation terms       : {len(deviation_terms)}\")\n",
     "\n",
     "    return df_schedule\n"
-   ],
-   "id": "86b7b2a81ddf1c"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "2df52f63-0885-4668-9f54-112299b6add4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "prefix_name = \"06_devpen\"\n",
     "first_start = 1\n",
@@ -707,23 +703,40 @@
     "    if not df_execution.empty:\n",
     "        show.plot_gantt_machines(df_execution, title=f\"Gantt-Diagramm für Simulationstag {day_numb}\", duration_column=\"Simulated Processing Time\")\n",
     "    else:\n",
-    "        print(f\"Nothing executed on day {day_numb}\")\n"
-   ],
-   "id": "ac3d86a658a2380c"
+    "        print(f\"Nothing executed on day {day_numb}\")"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "fca757b8-b4f0-48aa-ac7e-1cee8a994cc2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "notebook_duration = time.time() - start_notebook\n",
     "print(f\"Dauer: {int(notebook_duration // 60)} Minuten und {(notebook_duration % 60):.2f} Sekunden.\")"
-   ],
-   "id": "a8d047b382c03896"
+   ]
   }
  ],
- "metadata": {},
- "nbformat": 5,
- "nbformat_minor": 9
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
