--- a/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
+++ b/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "51955937-85cf-4bf5-b6d2-8afbb92750c4",
    "metadata": {},
    "outputs": [],
@@ -30,18 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c884f84c-8c3a-44e4-8fbc-19ec6a26f296",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import pandas as pd\n",
     "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "96a2339d-075e-46aa-a1cb-9aa6e58d447c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bcc819a3-bb19-4f48-8f57-a12284728ab7",
    "metadata": {},
    "outputs": [
@@ -182,7 +183,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +203,7 @@
    "id": "b7c7dfe6-079a-471c-b919-d0fa3e4aa849",
    "metadata": {},
    "source": [
-    "**FCFS-Scheduling Algorithmus\n",
+    "**FCFS-Scheduling Algorithmus**\n",
     "\n",
     "1. **Initialisierung**:\n",
     "\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3ea169a9-162e-42fc-83d2-36b9015e38c3",
    "metadata": {},
    "outputs": [],
@@ -282,17 +283,30 @@
     "        next_op[job] += 1\n",
     "        remaining -= 1\n",
     "\n",
-    "    return pd.DataFrame(schedule).sort_values(['Job', 'Start'])\n",
+    "    df_schedule = pd.DataFrame(schedule).sort_values(['Job', 'Start'])\n",
+    "    makespan = df_schedule['End'].max()\n",
+    "    print(\"\\nPlan-Informationen:\")\n",
+    "    print(f\"  Makespan: {makespan}\")\n",
+    "    return df_schedule\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "bb1413f4-5f4d-4a70-8f5f-f05cdde72280",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Plan-Informationen:\n",
+      "  Makespan: 1262.0\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -444,7 +458,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d91e3988-599e-4547-ae48-f9c52a8c3edf",
    "metadata": {},
    "outputs": [
@@ -477,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "368dfa29-7cb9-4c34-aaa6-a3386925df6d",
    "metadata": {},
    "outputs": [
@@ -498,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9ef21a37-288d-4f19-aa1d-a5142408c30b",
    "metadata": {},
    "outputs": [
@@ -517,7 +531,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,9 +545,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -545,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
