--- a/00_Preprocessing_and_Scheduling/02_COIN-OR LP Makespan.ipynb
+++ b/00_Preprocessing_and_Scheduling/02_COIN-OR LP Makespan.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_jssp_makespan(df_jssp: pd.DataFrame, solver: str = 'CBC', epsilon: float = 0.0, \n",
+    "def solve_jssp_makespan(df_jssp: pd.DataFrame, solver: str = 'CBC', epsilon: float = 0.06, \n",
     "                        time_limit: int = 1200, **solver_args):\n",
     "    \"\"\"\n",
     "    Minimiert den Makespan eines Job-Shop-Problems auf Basis eines DataFrames,\n",
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "3c55e75d-7b9d-44dc-bed3-cdf467def1fe",
    "metadata": {},
    "outputs": [
@@ -866,11 +866,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Maschinenkonflikte gefunden: 3 Zeilen betroffen.\n",
-      "      Job  Operation Machine   Start  Processing Time     End\n",
-      "3   job 1          0      M0   76.00               43  119.00\n",
-      "8   job 0          0      M0  118.98               29  147.98\n",
-      "11  job 6          1      M0  147.98               37  184.98\n",
+      "+ Keine Maschinenkonflikte gefunden\n",
       "+ Für alle Jobs ist die Operationssequenz korrekt.\n",
       "+ Zeitliche technologische Reihenfolge korrekt.\n"
      ]
@@ -881,7 +877,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,46 +890,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "9ef21a37-288d-4f19-aa1d-a5142408c30b",
+   "execution_count": null,
+   "id": "bd6c1e21-98fd-4a09-9509-f73767c95acd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Maschinenkonflikte gefunden: 3 Zeilen betroffen.\n",
-      "      Job  Operation Machine   Start  Processing Time     End\n",
-      "3   job 1          0      M0   76.00               43  119.00\n",
-      "8   job 0          0      M0  118.98               29  147.98\n",
-      "11  job 6          1      M0  147.98               37  184.98\n",
-      "+ Für alle Jobs ist die Operationssequenz korrekt.\n",
-      "+ Zeitliche technologische Reihenfolge korrekt.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "check.is_machine_conflict_free(df_plan)\n",
-    "check.is_operation_sequence_correct(df_plan)\n",
-    "check.is_job_timing_correct(df_plan)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -945,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
