--- a/12_CP_Scheduling_with_Arrival_and_DueDate/09_Deadline Streuung.ipynb
+++ b/12_CP_Scheduling_with_Arrival_and_DueDate/09_Deadline Streuung.ipynb
@@ -748,7 +748,7 @@
     }
    ],
    "source": [
-    "# Slack berechnen\n",
+    "# Slack berechnen (ohne Prossing Time) - eigentlich \"Zeitfenster\" / \"verfügbare Zeit\"\n",
     "df_times[\"Slack\"] = df_times[\"Deadline_original\"] - df_times[\"Arrival\"]\n",
     "\n",
     "\n",
