--- a/02_MILP_Scheduling_with_Arrival_and_DueDate/06a_Tardiness_Rolling Planning_simple.ipynb
+++ b/02_MILP_Scheduling_with_Arrival_and_DueDate/06a_Tardiness_Rolling Planning_simple.ipynb
@@ -1,28 +1,31 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Rolling Planning mit Tardiness (Max)",
-   "id": "eb01364037a6cdf6"
+   "id": "eb01364037a6cdf6",
+   "metadata": {},
+   "source": [
+    "# Rolling Planning mit Tardiness (Max)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "6e8e6aa40537a346",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import time\n",
     "pd.set_option('display.max_rows', 20)"
-   ],
-   "id": "6e8e6aa40537a346"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "9086f216777d6bb5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import utils.presenter as show\n",
     "import utils.checker as check\n",
@@ -30,131 +33,141 @@
     "import utils.rescheduling_solver_tardiness as rssv\n",
     "\n",
     "from ProductionDaySimulation import ProductionDaySimulation"
-   ],
-   "id": "9086f216777d6bb5"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "6efc41ecbbcbd8a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import utils.rolling_planning.init_jobs_times as rp_init\n",
     "import utils.rolling_planning.procedure as rp_proced"
-   ],
-   "id": "6efc41ecbbcbd8a"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Laden der Initialisierungsdaten",
-   "id": "3493ef25ba597afb"
+   "id": "3493ef25ba597afb",
+   "metadata": {},
+   "source": [
+    "## Laden der Initialisierungsdaten"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "54c719956291f08b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_jssp = pd.read_csv(\"data/05_tardiness_all_jssp.csv\")\n",
     "df_times = pd.read_csv(\"data/05_tardiness_all_times.csv\")"
-   ],
-   "id": "54c719956291f08b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Tag 0 ",
-   "id": "50b5f7c5984418e0"
+   "id": "50b5f7c5984418e0",
+   "metadata": {},
+   "source": [
+    "### Tag 0 "
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f6bcf80703f9feb7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_plan = pd.read_csv(\"data/05_tardiness_init_plan.csv\")\n",
     "df_execution = pd.read_csv(\"data/05_tardiness_init_execution.csv\")\n",
     "df_undone = pd.read_csv(\"data/05_tardiness_init_undone.csv\")"
-   ],
-   "id": "f6bcf80703f9feb7"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Settings",
-   "id": "b8a773d4ffb8b04d"
+   "id": "b8a773d4ffb8b04d",
+   "metadata": {},
+   "source": [
+    "### Settings"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "max_time = 60*60*7 # 7h",
-   "id": "4421da6931fec918"
+   "id": "4421da6931fec918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_time = 60*60*7 # 7h"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "25b723fe503e871",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_schedule_filename(prefix: str = \"\", day: int = 0, data_txt: str = \"schedule\", suffix: str = \"\") -> str:\n",
     "    file_template = \"data/{prefix}_{data}_{day:02d}{suffix}.csv\"\n",
     "    if suffix:\n",
     "        suffix = f\"_{suffix}\"\n",
     "    return file_template.format(prefix=prefix,data=data_txt,day=day, suffix=suffix)"
-   ],
-   "id": "25b723fe503e871"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Params",
-   "id": "fed7756cf28f0ff4"
+   "id": "fed7756cf28f0ff4",
+   "metadata": {},
+   "source": [
+    "## Params"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "e24890f60ef83bc2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# fix\n",
     "day_length = 1440\n",
     "horizon_days = 3\n",
     "\n",
     "notebook_prefix = \"6a\""
-   ],
-   "id": "e24890f60ef83bc2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3f50923763b7b088",
+   "metadata": {},
    "source": [
     "#### Rescheduling für Tage 1-5\n",
     "- Tag 1: Ankunfttermine in [1, 2, 3] + unabgeschlosse von Vortagen (evtl. Tag 0)\n",
     "- Tag 2: Ankunfttermine in [2, 3, 4] + unabgeschlosse von Vortagen (evtl. Tag 0 \"oder\" Tag 1)\n",
     "- ...\n",
     "- Tag 5: Ankunfttermine in [5, 6, 7] + unabgeschlosse von Vortagen"
-   ],
-   "id": "3f50923763b7b088"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "5b31a9dec3c64373",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "first_start = 1\n",
     "last_planning_start = 5"
-   ],
-   "id": "5b31a9dec3c64373"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "36474686fa16c2e4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for day_numb in range(first_start, last_planning_start + 1):\n",
     "    day_start = day_length * day_numb\n",
@@ -193,15 +206,14 @@
     "    else:\n",
     "        print(f\"Nothing executed on day {day_numb}\")\n",
     "    \n"
-   ],
-   "id": "36474686fa16c2e4"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
