--- a/13_CP_Scheduling_with_DueDate/08c_Proof-of-Concept (2).ipynb
+++ b/13_CP_Scheduling_with_DueDate/08c_Proof-of-Concept (2).ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "4aebdd83-5155-401b-9251-48c129801caf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-09T09:30:34.512890Z",
+     "start_time": "2025-06-09T09:30:32.502641Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -15,7 +18,9 @@
     "\n",
     "import utils.plotter_proof as proof\n",
     "import utils.calc as calc"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
